--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <nav class="ml-auto flex flex-wrap items-center gap-5 text-sm text-slate-600">
                     <a href="#" class="hover:text-slate-900">Natal</a>
                     <a href="#" class="hover:text-slate-900">Black Friday</a>
-                    <a href="#" class="hover:text-slate-900">Colunas</a>
+                    <a href="#" class="hover:text-slate-900">Moveis</a>
                     <a href="#" class="hover:text-slate-900">Acessórios</a>
                     <a href="#" class="hover:text-slate-900">Promoções</a>
                 </nav>
@@ -128,7 +128,7 @@
                         <div class="mt-6 space-y-4 rounded-2xl border border-[#12a8b4]/20 bg-white/60 p-4">
                             <div>
                                 <p class="text-xs font-semibold uppercase tracking-[0.3em] text-[#0fa5b8]">Material</p>
-                                <p class="text-sm text-slate-500">Escolhe o acabamento.</p>
+                                <p class="text-sm text-slate-500">Escolha o acabamento.</p>
                             </div>
                             <div id="preset-grid" class="grid grid-cols-2 justify-items-center gap-3 sm:grid-cols-4">
                             </div>
