Disco animation, fix some bugs

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <span class="rounded-full bg-white px-4 py-2 text-sm font-semibold text-slate-500">6 itens</span>
                 </div>
 
-                <div id="catalog-grid" class="grid gap-6 md:grid-cols-2 lg:grid-cols-3"></div>
+                <div id="catalog-grid" class="grid gap-6 auto-rows-[1fr] md:grid-cols-2 lg:grid-cols-3"></div>
             </section>
 
             <section id="faq" class="rounded-[32px] border border-slate-200 bg-white/90 p-8 shadow-sm lg:p-12">
