--- a/produto.html
+++ b/produto.html
@@ -97,8 +97,8 @@
                                 <div class="flex flex-wrap items-center gap-2 text-sm text-slate-600">
                                     <div id="rating-stars" class="flex items-center gap-1 text-amber-500"></div>
                                     <span id="rating-text1"></span>
-                                    <span id="rating-text2"
-                                        class="text-sm font-medium text-[#2b0f84] hover:underline"></span>
+                                    <a id="rating-text2" href="#reviews-section"
+                                        class="text-sm font-medium text-[#2b0f84] hover:underline"></a>
                                 </div>
                             </div>
                             <div class="flex gap-2">
@@ -184,7 +184,7 @@
                     </div>
                 </aside>
 
-                <div class="lg:col-span-2">
+                <div class="lg:col-span-2" id="reviews-section">
                     <div class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm lg:p-10">
                         <div class="grid gap-10 lg:grid-cols-[minmax(0,0.9fr)_minmax(0,1.1fr)]">
                             <div class="space-y-6">
