--- a/produto.html
+++ b/produto.html
@@ -125,12 +125,34 @@
                             </div>
                         </div>
 
-                        <div class="mt-6 space-y-4 rounded-2xl border border-[#12a8b4]/20 bg-white/60 p-4">
-                            <div>
-                                <p class="text-xs font-semibold uppercase tracking-[0.3em] text-[#0fa5b8]">Material</p>
-                                <p class="text-sm text-slate-500">Escolha o acabamento.</p>
+                        <div class="mt-6 rounded-3xl border border-slate-200 bg-white p-6 shadow-sm">
+                            <div class="flex flex-wrap items-start justify-between gap-4">
+                                <div>
+                                    <p class="text-xs font-semibold uppercase tracking-[0.3em] text-[#0fa5b8]">Materiais
+                                        e componentes</p>
+                                    <p class="text-sm text-slate-500">Escolha um estilo geral e personalize cada parte.
+                                    </p>
+                                </div>
+                                <button type="button" id="custom-material-reset"
+                                    class="text-xs font-semibold text-[#2b0f84] hover:underline">Repor
+                                    componentes</button>
                             </div>
-                            <div id="preset-grid" class="grid grid-cols-2 justify-items-center gap-3 sm:grid-cols-4">
+                            <div class="mt-5 space-y-3">
+                                <div class="flex items-center justify-between">
+                                    <p class="text-sm font-semibold text-slate-900">Presets</p>
+                                    <span class="text-xs text-slate-500">Selecione um acabamento base</span>
+                                </div>
+                                <div id="preset-grid"
+                                    class="grid grid-cols-2 justify-items-center gap-3 sm:grid-cols-4"></div>
+                            </div>
+                            <div class="mt-6 rounded-2xl bg-slate-50 p-4">
+                                <div class="flex flex-wrap items-start justify-between gap-3">
+                                    <div>
+                                        <p class="text-sm font-semibold text-slate-900">Componentes</p>
+                                        <p class="text-xs text-slate-500">Misture materiais para cada secao.</p>
+                                    </div>
+                                </div>
+                                <div id="custom-material-controls" class="mt-4 space-y-3"></div>
                             </div>
                         </div>
 
