--- a/produto.html
+++ b/produto.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
-
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/5bd296cf13.js" crossorigin="anonymous"></script>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
 
@@ -44,15 +45,35 @@
     <div class="min-h-screen">
         <header class="border-b bg-white">
             <div class="mx-auto flex max-w-6xl flex-wrap items-center gap-6 px-4 py-5">
-                <img src="./assets/images/La-redoute-logo.png" alt="La Redoute" class="h-10 w-auto" />
-                <nav class="ml-auto flex flex-wrap items-center gap-5 text-sm text-slate-600">
-                    <a href="#" class="hover:text-slate-900">Natal</a>
-                    <a href="#" class="hover:text-slate-900">Black Friday</a>
-                    <a href="#" class="hover:text-slate-900">Moveis</a>
-                    <a href="#" class="hover:text-slate-900">Acessórios</a>
-                    <a href="#" class="hover:text-slate-900">Promoções</a>
-                    <a href="index.html" class="font-semibold text-[#2b0f84] hover:text-[#3a1cb0]">Coleção</a>
-                </nav>
+                <a href="index.html" class="flex items-center gap-3">
+                    <img src="./assets/images/La-redoute-logo.png" alt="La Redoute" class="h-12 w-auto" />
+                </a>
+                <div class="ml-auto flex items-center gap-5">
+                    <nav class="flex flex-wrap items-center gap-5 text-sm text-slate-600">
+                        <a href="#" class="hover:text-slate-900">Natal</a>
+                        <a href="#" class="hover:text-slate-900">Black Friday</a>
+                        <a href="#" class="hover:text-slate-900">Moveis</a>
+                        <a href="#" class="hover:text-slate-900">Acessórios</a>
+                        <a href="#" class="hover:text-slate-900">Promoções</a>
+                        <a href="index.html" class="font-semibold text-[#2b0f84] hover:text-[#3a1cb0]">Coleção</a>
+                    </nav>
+                    <div class="flex items-center gap-3 pl-8">
+                        <span data-nav-heart="true"
+                            class="pointer-events-none relative inline-flex h-10 w-10 items-center justify-center rounded-full border border-slate-200 bg-white text-slate-400"
+                            aria-label="0 favoritos">
+                            <i data-nav-heart-icon="true" class="fa-regular fa-heart text-[1.15rem]"></i>
+                            <span data-nav-count="favorites"
+                                class="absolute -right-1.5 -top-1.5 flex min-h-[1.3rem] min-w-[1.3rem] items-center justify-center rounded-full bg-slate-200 px-1.5 text-[10px] font-semibold text-slate-600">0</span>
+                        </span>
+                        <button type="button" data-nav-control="cart"
+                            class="relative inline-flex h-10 w-10 items-center justify-center rounded-full border border-slate-200 bg-white text-slate-600 transition hover:text-[#2b0f84]"
+                            aria-label="0 itens no carrinho">
+                            <i data-nav-cart-icon="true" class="fa-solid fa-cart-shopping text-[1.15rem]"></i>
+                            <span data-nav-count="cart"
+                                class="absolute -right-1.5 -top-1.5 flex min-h-[1.3rem] min-w-[1.3rem] items-center justify-center rounded-full bg-slate-200 px-1.5 text-[10px] font-semibold text-slate-600">0</span>
+                        </button>
+                    </div>
+                </div>
             </div>
         </header>
 
@@ -103,24 +124,14 @@
                             </div>
                             <div class="flex gap-2">
                                 <button type="button" data-action="share"
-                                    class="rounded-full border border-slate-200 p-2 text-slate-600 transition hover:text-[#2b0f84]"
+                                    class="inline-flex h-10 w-10 items-center justify-center rounded-full border border-slate-200 bg-white text-slate-600 transition hover:text-[#2b0f84]"
                                     aria-label="Partilhar">
-                                    <svg viewBox="0 0 24 24" class="size-5" fill="none" stroke="currentColor"
-                                        stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                                        <circle cx="18" cy="5" r="3"></circle>
-                                        <circle cx="6" cy="12" r="3"></circle>
-                                        <circle cx="18" cy="19" r="3"></circle>
-                                        <line x1="8.59" y1="13.51" x2="15.42" y2="17.49"></line>
-                                        <line x1="15.41" y1="6.51" x2="8.59" y2="10.49"></line>
-                                    </svg>
+                                    <i class="fa-solid fa-share text-[1.05rem]"></i>
                                 </button>
                                 <button type="button" data-action="wishlist"
-                                    class="rounded-full border border-slate-200 p-2 text-slate-600 transition hover:text-[#2b0f84]"
-                                    aria-label="Adicionar aos favoritos">
-                                    <svg viewBox="0 0 24 24" class="size-5" fill="none" stroke="currentColor"
-                                        stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                                        <path d="M19 14c0 5-7 9-7 9s-7-4-7-9a4 4 0 0 1 7-3 4 4 0 0 1 7 3z"></path>
-                                    </svg>
+                                    class="inline-flex h-10 w-10 items-center justify-center rounded-full border border-slate-200 bg-white text-slate-600 transition hover:text-[#ef3f6b]"
+                                    aria-label="Adicionar aos favoritos" aria-pressed="false">
+                                    <i class="fa-regular fa-heart text-[1.05rem]"></i>
                                 </button>
                             </div>
                         </div>
@@ -149,7 +160,7 @@
                                 <div class="flex flex-wrap items-start justify-between gap-3">
                                     <div>
                                         <p class="text-sm font-semibold text-slate-900">Componentes</p>
-                                        <p class="text-xs text-slate-500">Misture materiais para cada secao.</p>
+                                        <p class="text-xs text-slate-500">Misture materiais para cada secção.</p>
                                     </div>
                                 </div>
                                 <div id="custom-material-controls" class="mt-4 space-y-3"></div>
@@ -168,14 +179,9 @@
                         </div>
 
                         <div class="mt-6 grid gap-3 sm:grid-cols-[1.2fr_1fr]">
-                            <button
+                            <button data-action="add-to-cart"
                                 class="flex h-12 items-center justify-center gap-1.5 rounded-full bg-[#2b0f84] px-6 text-sm font-semibold uppercase tracking-wide text-white transition hover:bg-[#3a1cb0]">
-                                <svg viewBox="0 0 24 24" class="size-4" fill="none" stroke="currentColor"
-                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                                    <circle cx="9" cy="21" r="1"></circle>
-                                    <circle cx="20" cy="21" r="1"></circle>
-                                    <path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path>
-                                </svg>
+                                <i class="fa-solid fa-cart-shopping text-[0.95rem]"></i>
                                 Adicionar ao carrinho
                             </button>
                             <button
@@ -194,11 +200,7 @@
 
                         <div class="mt-8 rounded-2xl bg-slate-50 p-4 text-sm text-slate-600">
                             <div class="flex flex-wrap items-center gap-3">
-                                <svg viewBox="0 0 24 24" class="size-5 text-[#2b0f84]" fill="none" stroke="currentColor"
-                                    stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-                                    <path d="M21 11.5a8.5 8.5 0 1 1-3.16-6.56"></path>
-                                    <polyline points="22 4 21 11 13 12"></polyline>
-                                </svg>
+                                <i class="fa-solid fa-circle-info text-lg text-[#2b0f84]"></i>
                                 Tem dúvidas sobre cápsulas ou calibração? Fale connosco no chat ao vivo ou envie uma
                                 mensagem.
                             </div>
