--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
                 <p class="text-xs font-semibold uppercase tracking-[0.4em] text-[#0fa5b8]">Coleção Signature</p>
                 <div class="mt-4 flex flex-wrap items-center gap-6">
                     <div class="space-y-4 text-slate-600">
-                        <h1 class="text-4xl font-semibold text-slate-900">Descubra o universo La Redoute Audio</h1>
+                        <h1 class="text-4xl font-semibold text-slate-900">Descubra o universo La Redoute</h1>
                         <p class="max-w-2xl text-base">Selecionámos um conjunto exclusivo de peças para criar ambientes
-                            sonoros sofisticados. O gira-discos artesanais lidera a coleção, seguido de conceitos
+                            sonoros sofisticados. O gira-discos artesanal lidera a coleção, seguido de conceitos
                             fictícios para inspirar o ecossistema perfeito em torno do vinil.</p>
                     </div>
                     <a href="produto.html"
@@ -99,26 +99,27 @@
                         <p class="text-xs font-semibold uppercase tracking-[0.3em] text-[#0fa5b8]">FAQ</p>
                         <h2 class="text-3xl font-semibold text-slate-900">Perguntas frequentes</h2>
                         <p class="text-sm text-slate-600">Todos os produtos fictícios servem apenas para ilustrar
-                            possíveis expansões da coleção. Apenas o gira-discos pode ser adquirido nesta fase.</p>
+                            possíveis expansões da coleção. Nesta fase, apenas o gira-discos pode ser adquirido.</p>
                     </div>
                     <div class="space-y-4 text-sm text-slate-600">
                         <details class="rounded-2xl border border-slate-100 bg-white/70 p-4">
                             <summary class="cursor-pointer text-base font-semibold text-slate-900">Posso reservar os
                                 conceitos apresentados?</summary>
-                            <p class="mt-2 text-sm text-slate-600">Atualmente não, mas pode registar interesse no chat
-                                do produto principal para ser notificado quando estes protótipos avançarem.</p>
+                            <p class="mt-2 text-sm text-slate-600">Atualmente não, mas pode registar o seu interesse no
+                                chat
+                                do produto principal para que o notifiquemos assim que estes protótipos estejam
+                                disponiveis.</p>
                         </details>
                         <details class="rounded-2xl border border-slate-100 bg-white/70 p-4">
                             <summary class="cursor-pointer text-base font-semibold text-slate-900">Existem imagens reais
                                 dos protótipos?</summary>
-                            <p class="mt-2 text-sm text-slate-600">Ainda não. Cada card corresponde a uma ideia de
-                                design que pode vir a ser desenvolvida pelas equipas de produto La Redoute Audio.</p>
+                            <p class="mt-2 text-sm text-slate-600">Ainda não. Cada design corresponde a uma ideia de
+                                produto que pode vir a ser desenvolvida pelas equipas de produto La Redoute.</p>
                         </details>
                         <details class="rounded-2xl border border-slate-100 bg-white/70 p-4">
                             <summary class="cursor-pointer text-base font-semibold text-slate-900">O que posso adquirir
                                 hoje?</summary>
-                            <p class="mt-2 text-sm text-slate-600">Apenas o gira-discos Vinil descrito na página
-                                principal. Todos os botões "Em breve" estão desativados.</p>
+                            <p class="mt-2 text-sm text-slate-600">Apenas o gira-discos vinil.</p>
                         </details>
                     </div>
                 </div>
