--- a/produto.html
+++ b/produto.html
@@ -12,12 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet" />
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/5bd296cf13.js" crossorigin="anonymous"></script>
-    <!-- Tailwind CSS -->
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
-
     <!-- Tailwind Custom Config -->
     <script>
-        tailwind.config = {
+        window.tailwind = window.tailwind || {};
+        window.tailwind.config = {
             theme: {
                 extend: {
                     fontFamily: {
@@ -27,6 +25,9 @@
             },
         };
     </script>
+
+    <!-- Tailwind CSS -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio"></script>
 
     <!-- Three.js Importmap -->
     <script type="importmap">
@@ -43,6 +44,9 @@
 
 <body class="bg-[#f4f5f7] text-slate-900">
     <div class="min-h-screen">
+        <div
+            class="hidden min-w-0 flex-wrap gap-x-3 gap-y-2 order-1 order-2 order-3 order-4 order-5 w-8 w-10 w-12 w-full text-xs text-sm text-lg text-xl ml-auto text-right sm:ml-auto sm:ml-0 sm:w-10 sm:w-12 sm:text-sm sm:text-xl sm:flex-1 sm:order-none">
+        </div>
         <header class="border-b bg-white">
             <div class="mx-auto flex max-w-6xl flex-wrap items-center gap-6 px-4 py-5">
                 <a href="index.html" class="flex items-center gap-3">
@@ -77,24 +81,33 @@
             </div>
         </header>
 
-        <main class="mx-auto max-w-6xl space-y-16 px-4 py-10 lg:py-14">
-            <section class="grid gap-10 lg:grid-cols-[minmax(0,1.45fr)_minmax(0,1fr)]">
-                <div class="space-y-6">
-                    <div class="overflow-hidden rounded-[32px] border border-slate-200 bg-white shadow-sm">
+        <main class="mx-auto max-w-6xl space-y-12 px-4 py-10 md:space-y-16 lg:py-14">
+            <section class="flex flex-col gap-8 md:gap-10 lg:grid lg:grid-cols-[minmax(0,1.45fr)_minmax(0,1fr)]">
+                <div class="contents lg:block lg:space-y-6">
+                    <div class="order-1 overflow-hidden rounded-[32px] border border-slate-200 bg-white shadow-sm">
                         <div class="aspect-[4/3] md:aspect-[5/3] lg:aspect-[7/4]">
                             <div id="viewer-container"
-                                class="relative h-full w-full min-h-[360px] bg-slate-900/5 lg:min-h-[560px]">
+                                class="relative h-full w-full min-h-[260px] bg-slate-900/5 sm:min-h-[320px] lg:min-h-[560px]">
                                 <canvas id="record-player-canvas" class="h-full w-full"></canvas>
+                                <button type="button" id="viewer-audio-toggle"
+                                    class="group absolute right-4 top-4 flex h-11 w-11 items-center justify-center rounded-full border border-white/60 bg-white/90 text-[#2b0f84] shadow-lg backdrop-blur transition hover:border-[#2b0f84]/40 hover:text-[#2b0f84] focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-[#2b0f84]"
+                                    aria-label="Som ligado (silenciar)" aria-pressed="false">
+                                    <span data-sound-label class="sr-only">Silenciar som</span>
+                                    <span data-sound-state="on" class="text-lg"><i
+                                            class="fa-solid fa-volume-high"></i></span>
+                                    <span data-sound-state="off" class="hidden text-lg"><i
+                                            class="fa-solid fa-volume-xmark"></i></span>
+                                </button>
                             </div>
                         </div>
                     </div>
 
-                    <div class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm">
+                    <div class="order-3 rounded-3xl border border-slate-200 bg-white p-6 shadow-sm lg:order-none">
                         <h2 class="text-lg font-semibold text-slate-900">Detalhes do produto</h2>
                         <ul id="highlights-list" class="mt-4 space-y-3 text-sm text-slate-600"></ul>
                     </div>
 
-                    <div class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm">
+                    <div class="order-4 rounded-3xl border border-slate-200 bg-white p-6 shadow-sm lg:order-none">
                         <div class="flex flex-wrap items-center justify-between gap-4">
                             <div>
                                 <p class="text-sm font-semibold uppercase tracking-[0.3em] text-[#0fa5b8]">Produtos
@@ -108,7 +121,7 @@
                     </div>
                 </div>
 
-                <aside class="space-y-6">
+                <aside class="order-2 space-y-6 lg:order-none">
                     <div class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm lg:p-8">
                         <div class="flex flex-wrap items-start justify-between gap-4">
                             <div class="space-y-2">
@@ -208,18 +221,18 @@
                     </div>
                 </aside>
 
-                <div class="lg:col-span-2" id="reviews-section">
+                <div class="order-5 lg:order-none lg:col-span-2" id="reviews-section">
                     <div class="rounded-3xl border border-slate-200 bg-white p-6 shadow-sm lg:p-10">
                         <div class="grid gap-10 lg:grid-cols-[minmax(0,0.9fr)_minmax(0,1.1fr)]">
-                            <div class="space-y-6">
+                            <div class="min-w-0 space-y-6">
                                 <div>
                                     <p class="text-sm font-semibold uppercase tracking-[0.18em] text-slate-500">
                                         Avaliação
                                         dos clientes</p>
-                                    <div class="mt-4 flex items-end gap-4">
+                                    <div class="mt-4 flex flex-wrap items-end gap-4">
                                         <span id="average-rating-large"
                                             class="text-6xl font-semibold text-slate-900">0.0</span>
-                                        <div class="space-y-2 text-sm text-slate-600">
+                                        <div class="min-w-0 flex-1 space-y-2 text-sm text-slate-600">
                                             <div id="rating-stars-secondary"
                                                 class="flex items-center gap-1 text-amber-500">
                                             </div>
@@ -230,10 +243,10 @@
                                 </div>
                                 <div id="rating-breakdown" class="space-y-3 text-sm text-slate-600"></div>
                             </div>
-                            <div class="space-y-6">
+                            <div class="min-w-0 space-y-6">
                                 <h2 class="text-2xl font-semibold text-slate-900">Avaliações em destaque</h2>
-                                <div id="reviews-slider-wrapper" class="overflow-hidden">
-                                    <div id="reviews-slider-track" class="flex w-full"></div>
+                                <div id="reviews-slider-wrapper" class="overflow-hidden min-w-0">
+                                    <div id="reviews-slider-track" class="flex w-full min-w-0"></div>
                                 </div>
                                 <button
                                     class="h-12 w-full rounded-full border border-slate-200 text-base font-semibold text-slate-900 transition hover:border-[#2b0f84]">Ver
